tests/unit/parser/invalid-problems/revealables-section-without-requirement.pddl
; revealables section (4:10) defined, but `:revealables` does not appear in requirements section
(define (problem revealables-section-without-requirement)
        (:domain invalid-problems-domain)
        (:reveals)
        (:goal (and)))